<resources>
    <string name="app_name">U3P2_MasterDetail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">button</string>
    <string name="nw_unit_name">Name</string>
    <string name="nw_unit_description">Description</string>
    <string name="nw_unit_create">Create</string>
    <string name="image_show_unit">Image representative of the unit</string>
    <string name="cost">Cost:</string>
    <string name="hp">HP:</string>
    <string name="xp">XP:</string>
    <string name="mp">MP:</string>
    <string name="empty_value">0</string>
    <string name="hp_value">HP: %s</string>
    <string name="cost_value">Cost: %s</string>
    <string name="mp_value">MP: %s</string>
    <string name="xp_value">XP: %s</string>
    <string name="unit_values">Cost: %1$s&#160;&#160;&#160;HP: %2$s&#160;&#160;&#160;XP: %3$s&#160;&#160;&#160;MP:%4$s</string>
    <string name="random_description">I\'m %s</string>
    <string name="unit_modify">Modify</string>
</resources>