<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".NewUnitFragment">

    <FrameLayout
            android:id="@+id/fl_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/frame"
                android:layout_gravity="center"/>
        <ImageView
                android:id="@+id/iv_unit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
    </FrameLayout>
    <!-- Name -->
    <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/nw_unit_name"/>
    <!-- Cost -->
    <TextView
            android:id="@+id/tv_cost"
            android:layout_width="40dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/et_cost"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintBottom_toBottomOf="@id/et_cost"
            android:gravity="center|start"
            android:text="@string/cost"/>

    <EditText
            android:id="@+id/et_cost"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintStart_toEndOf="@id/tv_cost"
            app:layout_constraintBottom_toTopOf="@id/et_xp"
            android:inputType="none"
            android:focusable="false"
            android:text="@string/empty_value"/>
    <!-- HP -->
    <TextView
            android:id="@+id/tv_hp"
            android:layout_width="40dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/et_hp"
            app:layout_constraintStart_toEndOf="@id/et_cost"
            app:layout_constraintBottom_toBottomOf="@id/et_hp"
            android:gravity="center|start"
            android:text="@string/hp"/>

    <EditText
            android:id="@+id/et_hp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintStart_toEndOf="@id/tv_hp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_mp"
            android:inputType="none"
            android:focusable="false"
            android:text="@string/empty_value"/>
    <!-- XP -->
    <TextView
            android:id="@+id/tv_xp"
            android:layout_width="40dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/et_xp"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintBottom_toBottomOf="@id/et_xp"
            android:gravity="center|start"
            android:text="@string/xp"/>

    <EditText
            android:id="@+id/et_xp"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_cost"
            app:layout_constraintStart_toEndOf="@id/tv_xp"
            android:inputType="none"
            android:focusable="false"
            android:text="@string/empty_value"/>
    <!-- MP -->
    <TextView
            android:id="@+id/tv_mp"
            android:layout_width="40dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/et_mp"
            app:layout_constraintStart_toEndOf="@id/et_xp"
            app:layout_constraintBottom_toBottomOf="@id/et_mp"
            android:gravity="center|start"
            android:text="@string/mp"/>

    <EditText
            android:id="@+id/et_mp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_hp"
            app:layout_constraintStart_toEndOf="@id/tv_mp"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="none"
            android:focusable="false"
            android:text="@string/empty_value"/>
    <!-- Description -->
    <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_unit"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/nw_unit_description"/>
    <Button
            android:id="@+id/btn_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_description"
            android:text="@string/unit_modify"/>
</androidx.constraintlayout.widget.ConstraintLayout>