<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".fragments.NewUnitFragment"
        android:background="@color/half_black">

    <FrameLayout
            android:id="@+id/fl_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="15dp"
            android:paddingBottom="15dp"
            android:layout_gravity="center">

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/frame"
                android:layout_gravity="center"/>
        <ImageView
                android:id="@+id/iv_unit"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"/>
    </FrameLayout>
    <!-- Name -->
    <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    <!-- Data -->
    <TextView
            android:id="@+id/tv_cost"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_hp"
            android:textSize="18sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/cost_value"
            android:textColor="@color/white"/>
    <TextView
            android:id="@+id/tv_hp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:textSize="18sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/hp_value"
            android:textColor="@color/white"/>
    <TextView
            android:id="@+id/tv_xp"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/fl_unit"
            app:layout_constraintTop_toBottomOf="@+id/tv_cost"
            app:layout_constraintEnd_toStartOf="@+id/tv_mp"
            android:textSize="18sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/xp_value"
            android:textColor="@color/white"/>
    <TextView
            android:id="@+id/tv_mp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_xp"
            app:layout_constraintTop_toBottomOf="@+id/tv_hp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/mp_value"
            android:textColor="@color/white"/>
    <!-- Description -->
    <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_unit"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:textColor="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbtn_go_modify_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:tint="@color/white"
            app:backgroundTint="@color/darK_blue"
            android:contentDescription="@string/button"/>
</androidx.constraintlayout.widget.ConstraintLayout>